; ModuleID = '/home/carl/AnghaBench/linux/drivers/vhost/extr_vhost.c_vhost_chr_poll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/vhost/extr_vhost.c_vhost_chr_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.vhost_dev = type { i32, i32 }

@EPOLLIN = common dso_local global i32 0, align 4
@EPOLLRDNORM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vhost_chr_poll(%struct.file* %0, %struct.vhost_dev* %1, i32* %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.vhost_dev*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %4, align 8
  store %struct.vhost_dev* %1, %struct.vhost_dev** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = load %struct.file*, %struct.file** %4, align 8
  %9 = load %struct.vhost_dev*, %struct.vhost_dev** %5, align 8
  %10 = getelementptr inbounds %struct.vhost_dev, %struct.vhost_dev* %9, i32 0, i32 1
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @poll_wait(%struct.file* %8, i32* %10, i32* %11)
  %13 = load %struct.vhost_dev*, %struct.vhost_dev** %5, align 8
  %14 = getelementptr inbounds %struct.vhost_dev, %struct.vhost_dev* %13, i32 0, i32 0
  %15 = call i32 @list_empty(i32* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %23, label %17

17:                                               ; preds = %3
  %18 = load i32, i32* @EPOLLIN, align 4
  %19 = load i32, i32* @EPOLLRDNORM, align 4
  %20 = or i32 %18, %19
  %21 = load i32, i32* %7, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %17, %3
  %24 = load i32, i32* %7, align 4
  ret i32 %24
}

declare dso_local i32 @poll_wait(%struct.file*, i32*, i32*) #1

declare dso_local i32 @list_empty(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
